--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,47 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-
-# C extensions
+# Compiled files
+*.py[co]
+*.a
+*.o
 *.so
+__pycache__
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+# Ignore .c files by default to avoid including generated code. If you want to
+# add a non-generated .c extension, use `git add -f filename.c`.
+*.c
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
+# Other generated files
+*/version.py
+*/cython_version.py
+htmlcov
 .coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
+MANIFEST
 
-# Translations
-*.mo
-*.pot
+# Sphinx
+docs/api
+docs/_build
 
-# Django stuff:
-*.log
+# Eclipse editor project files
+.project
+.pydevproject
+.settings
 
-# Sphinx documentation
-docs/_build/
+# Packages/installer info
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+distribute-*.tar.gz
 
-# PyBuilder
-target/
+# Other
+.*.swp
+*~
+
+# Mac OSX
+.DS_Store
