--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ edit_on_github = False
 github_project = srodney/hstphot
 # install_requires should be formatted as a comma-separated list, e.g.:
 # install_requires = astropy, scipy, matplotlib
-install_requires = astropy
+install_requires = astropy, photutils
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
 version = 0.1.dev0
 # Note: you will also need to change this in your package's __init__.py
